--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -1,41 +1,35 @@
 <header class="pointer-events-none relative z-50 flex flex-col">
-    {% include announcement.liquid %}
-    <div class="top-0 z-10 h-16 pt-6">
-        <div class="sm:px-8">
-            <div class="max-w-7xl mx-auto lg:px-8">
-                <div class="relative px-4 sm:px-8 lg:px-12">
-                    <div class="max-w-2xl mx-auto lg:max-w-5xl">
-                        <div class="relative flex gap-4 justify-center">
-                            <div class="flex flex-1">
-                                {% unless page.hide_avatar %}
-                                    <div class="h-10 w-10 rounded-full bg-white/90 p-0.5 shadow-lg shadow-gray-800/5 ring-1 ring-gray-900/5 backdrop-blur">
-                                        <a href="{% link _pages/index.liquid %}" aria-label="divashen.com"
-                                           title="divashen.com" class="block pointer-events-auto">
-                                            <img src="/assets/images/astro.jpg" alt="Divashen Govender"
-                                                 class="rounded-full bg-gray-100 object-cover h-9 w-9">
-                                        </a>
-                                    </div>
-                                {% endunless %}
-                            </div>
-                            <div class="flex flex-1 justify-end md:justify-center">
-                                {% include navigation/mobile.liquid %}
-                                {% include navigation/desktop.liquid %}
-                            </div>
-                            <div class="flex justify-end md:flex-1">
-                                <div class="pointer-events-auto">
-                                    <a href="https://wavesandcode.substack.com/feed" title="RSS" aria-label="RSS"
-                                       class="block group rounded-full bg-white/90 px-3.5 py-2.5 shadow-lg shadow-gray-800/5 ring-1 ring-gray-900/5 backdrop-blur">
-                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
-                                            <path d="M3.75 3a.75.75 0 0 0-.75.75v.5c0 .414.336.75.75.75H4c6.075 0 11 4.925 11 11v.25c0 .414.336.75.75.75h.5a.75.75 0 0 0 .75-.75V16C17 8.82 11.18 3 4 3h-.25Z"/>
-                                            <path d="M3 8.75A.75.75 0 0 1 3.75 8H4a8 8 0 0 1 8 8v.25a.75.75 0 0 1-.75.75h-.5a.75.75 0 0 1-.75-.75V16a6 6 0 0 0-6-6h-.25A.75.75 0 0 1 3 9.25v-.5ZM7 15a2 2 0 1 1-4 0 2 2 0 0 1 4 0Z"/>
-                                        </svg>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+  {% include announcement.liquid %}
+  <div class="top-0 z-10 h-16 pt-6">
+    <div class="sm:px-8">
+      <div class="max-w-7xl mx-auto lg:px-8">
+        <div class="relative px-4 sm:px-8 lg:px-12">
+          <div class="max-w-2xl mx-auto lg:max-w-5xl">
+            <div class="relative flex gap-4 justify-center">
+              <div class="flex flex-1">
+                {% unless page.hide_avatar %}
+                  <div class="h-10 w-10 rounded-full bg-white/90 p-0.5 shadow-lg shadow-gray-800/5 ring-1 ring-gray-900/5 backdrop-blur">
+                    <a href="{% link _pages/index.liquid %}" aria-label="divashen.com" title="divashen.com" class="block pointer-events-auto">
+                      <img src="/assets/images/astro.jpg" alt="Divashen Govender" class="rounded-full bg-gray-100 object-cover h-9 w-9">
+                    </a>
+                  </div>
+                {% endunless %}
+              </div>
+              <div class="flex flex-1 justify-end md:justify-center">
+                {% include navigation/mobile.liquid %}
+                {% include navigation/desktop.liquid %}
+              </div>
+              <div class="flex justify-end md:flex-1">
+                <div class="pointer-events-auto">
+                  <a href="https://wavesandcode.substack.com/feed" title="RSS" aria-label="RSS" class="block group rounded-full bg-white/90 px-3.5 py-2.5 shadow-lg shadow-gray-800/5 ring-1 ring-gray-900/5 backdrop-blur">
+                    {% comment %}{% svg assets/icons/mini/rss.svg class="h-5 w-5 text-gray-500 group-hover:text-gray-800" %}{% endcomment %}
+                  </a>
                 </div>
+              </div>
             </div>
+          </div>
         </div>
+      </div>
     </div>
+  </div>
 </header>
