--- a/_includes/navigation/mobile.liquid
+++ b/_includes/navigation/mobile.liquid
@@ -16,7 +16,7 @@
         <ul class="-my-2 divide-y divide-gray-100 text-base text-gray-800">
           {% for link in site.data.navigation_links %}
             <li>
-              <a href="{% link {{ link.href }} %}" class="block py-2">{{ link.title }}</a>
+              <a href="{{ link.href }}" class="block py-2">{{ link.title }}</a>
             </li>
           {% endfor %}
         </ul>
