Add site.baseurl to image.

--- a/_pages/index.liquid
+++ b/_pages/index.liquid
@@ -10,7 +10,7 @@ hide_avatar: true
   <div class="lg:px-20">
     <div class="max-w-[250px] px-2.5 lg:max-w-[300px]">
       <figure>
-        <img src="/assets/images/divashen.jpg" width="300" height="300" alt="Divashen Govender" class="aspect-square sm:-rotate-3 rounded-2xl bg-gray-100 object-cover">
+        <img src="{{ site.baseurl }}/assets/images/divashen.jpg" width="300" height="300" alt="Divashen Govender" class="aspect-square sm:-rotate-3 rounded-2xl bg-gray-100 object-cover">
         <figcaption class="sr-only">Divashen Govender</figcaption>
       </figure>
     </div>
