--- a/_includes/meta.liquid
+++ b/_includes/meta.liquid
@@ -26,8 +26,8 @@
 <meta name="twitter:image" content="{{ image }}">
 <meta name="twitter:card" content="summary_large_image">
 
-<link rel="icon" type="image/png" href="/assets/favicons/32x32.png" sizes="32x32">
-<link rel="icon" type="image/png" href="/assets/favicons/192x192.png" sizes="192x192">
-<link rel="apple-touch-icon" href="/assets/favicons/180x180.png" sizes="180x180">
+<link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/favicons/32x32.png" sizes="32x32">
+<link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/favicons/192x192.png" sizes="192x192">
+<link rel="apple-touch-icon" href="{{ site.baseurl }}/assets/favicons/180x180.png" sizes="180x180">
 
 {% feed_meta %}
