Add my newsletter.

--- a/_includes/newsletter/subscribe.liquid
+++ b/_includes/newsletter/subscribe.liquid
@@ -1,13 +1,17 @@
 {% comment %}
-Renders an email capture form.
+Renders an email capture form for Substack.
 - cta: Optional (default value). The text on the submit button.
-- tag: Optional. A Buttondown tag to add to the subscriber.
+- url: Required. The URL to your Substack newsletter.
 {% endcomment %}
 
-<form action="https://buttondown.email/api/emails/embed-subscribe/joemasilotti" method="post" onsubmit="window.open('https://buttondown.email/joemasilotti', 'popupwindow')" class="not-prose flex mt-6">
-  <input type="email" name="email" placeholder="Email address" aria-label="Email address" required autocomplete="email" class="min-w-0 max-w-xs flex-auto appearance-none rounded-md border border-gray-900/10 bg-white px-3 py-[calc(theme(spacing.2)-1px)] shadow-md shadow-gray-800/5 placeholder:text-gray-500 focus:border-primary-600 focus:outline-none focus:ring-4 focus:ring-primary-600/10 sm:text-sm">
-  {% if include.tag %}
-    <input type="hidden" name="tag" value="{{ include.tag }}">
-  {% endif %}
-  <button type="submit" class="button button-primary ml-4 flex-none">{{ include.cta | default: "Subscribe" }}</button>
-</form>
+<div style="max-width: 480px; margin: 0 auto; padding: 12px; background: #f9f9f9; border: 1px solid #ddd; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+    <iframe
+            src="https://wavesandcode.substack.com/embed"
+            width="420"
+            height="120"
+            style="border: none; background: transparent;"
+            frameborder="0"
+            scrolling="no">
+        <div style="position: absolute; top: 90%; left: 0; width: 100%; height: 20px; background: white; z-index: 999;"></div>
+    </iframe>
+</div>
