--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -10,7 +10,7 @@
                 {% unless page.hide_avatar %}
                   <div class="h-10 w-10 rounded-full bg-white/90 p-0.5 shadow-lg shadow-gray-800/5 ring-1 ring-gray-900/5 backdrop-blur">
                     <a href="{% link _pages/index.liquid %}" aria-label="divashen.com" title="divashen.com" class="block pointer-events-auto">
-                      <img src="/assets/images/astro.jpg" alt="Divashen Govender" class="rounded-full bg-gray-100 object-cover h-9 w-9">
+                      <img src="{{ site.baseurl }}/assets/images/astro.png" alt="Divashen Govender" class="rounded-full bg-gray-100 object-cover h-9 w-9">
                     </a>
                   </div>
                 {% endunless %}
